# seq_and_convert

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  conf.yaml  env.yaml  generate_mock_files.py  get_mimetypes.py  main.py  mimetypes.json  pyproject.toml  seq_and_convert.py  test_main.py  test_seq_and_convert.py
src/seq_and_convert/: cli.py  core.py  seq_and_convert.py
test_files/: fake_csv.csv  pbmc1k_empty.csv  pbmc1k_subset.csv  pbmc1k_subset_identical_colnames.csv  pbmc1k_subset_transposed.csv
test_files/pbmc1k_subset/: barcodes.tsv  features.tsv  matrix.mtx
test_seq_and_convert/: pbmc3k_empty.csv  pbmc3k_subset.csv  pbmc3k_subset.h5  pbmc3k_subset_identical_colnames.csv  pbmc3k_subset_transposed.csv
